force-app/main/default/objects/Work_Day_Adjustments__c/Work_Day_Adjustments__c.object-meta.xml
<CustomObject>
    <description>Adjust calls, meetings per week metric for the Sales users</description>
    <label>Work Day Adjustments</label>
    <nameField>
        <displayFormat>WDA-{000000}</displayFormat>
        <label>Work Day Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Day Adjustments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>