force-app/main/default/objects/Work_Day_Adjustments__c/fields/Apr_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Apr_Work_Days__c</fullName>
    <description>The number of work days in the month</description>
    <inlineHelpText>The number of work days in the month</inlineHelpText>
    <label>Apr Work Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>