force-app/main/default/objects/Work_Day_Adjustments__c/fields/Jun_Adjusted_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Jun_Adjusted_Work_Days__c</fullName>
    <description>Jun Work Days – Jun Leave Adjustment</description>
    <formula>FiscalYear__r.June_Work_Days_Value__c  - (Jun_Leave_Adjustment__c +  Holiday__r.June__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Jun Work Days – Jun Leave Adjustment</inlineHelpText>
    <label>Jun Adjusted Work Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>