force-app/main/default/objects/Work_Day_Adjustments__c/fields/Mar_Leave_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Mar_Leave_Adjustment__c</fullName>
    <description>The number of leave days taken in the month</description>
    <inlineHelpText>The number of leave days taken in the month</inlineHelpText>
    <label>Mar Leave Adjustment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>