force-app/main/default/objects/Work_Day_Adjustments__c/fields/Oct_Adjusted_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Oct_Adjusted_Work_Days__c</fullName>
    <description>Oct Work Days – Oct Leave Adjustment</description>
    <formula>FiscalYear__r.Oct_Work_Days_Value__c  - (Oct_Leave_Adjustment__c +  Holiday__r.October__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Oct Work Days – Oct Leave Adjustment</inlineHelpText>
    <label>Oct Adjusted Work Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>