force-app/main/default/objects/Work_Day_Adjustments__c/fields/Q2_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Q2_Work_Days__c</fullName>
    <description>The number of work days in the quarter</description>
    <formula>Oct_Work_Days__c + Nov_Work_Days__c + Dec_Work_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of work days in the quarter</inlineHelpText>
    <label>Q2 Work Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>