force-app/main/default/objects/Work_Day_Adjustments__c/fields/Q3_Leave_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Q3_Leave_Adjustment__c</fullName>
    <description>The number of leave days taken in the quarter</description>
    <formula>Jan_Leave_Adjustment__c  +  Feb_Leave_Adjustment__c  +  Mar_Leave_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of leave days taken in the quarter</inlineHelpText>
    <label>Q3 Leave Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>