force-app/main/default/objects/Work_Day_Adjustments__c/fields/Q4_Work_Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Q4_Work_Days_Elapsed__c</fullName>
    <description>The number of work days elapsed in the quarter</description>
    <formula>IF(TODAY()&lt;DATE(VALUE(FiscalYear__r.Name),4,1), 0 , 

IF(DATE(VALUE(FiscalYear__r.Name),6,30)&gt; TODAY() , 

CASE(MOD( DATE(VALUE(FiscalYear__r.Name),4,1) - DATE(1985,6,24),7), 
  0 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY() - DATE(VALUE(FiscalYear__r.Name),4,1) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY()- DATE(VALUE(FiscalYear__r.Name),4,1) )/7)*5)

, FiscalYear__r.Q4_Work_Days__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of work days elapsed in the quarter</inlineHelpText>
    <label>Q4 Work Days Elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>