force-app/main/default/objects/Work_Day_Adjustments__c/fields/Target_Activity__c.field-meta.xml
<CustomField>
    <fullName>Target_Activity__c</fullName>
    <description>Target daily/weekly activity</description>
    <formula>CASE(TEXT( Role__c ),
                      &apos;Key Accounts&apos;, 5,
                      &apos;Inside Sales&apos;, 10,
                      &apos;Territory Sales&apos;, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Target daily/weekly activity</inlineHelpText>
    <label>Target Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>