force-app/main/default/objects/Work_Day_Adjustments__c/listViews/FY_2020_WDA_with_Details.listView-meta.xml
<ListView>
    <fullName>FY_2020_WDA_with_Details</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Current_Role__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sales_Team__c</columns>
    <columns>Sales_Team_Manager__c</columns>
    <columns>FiscalYear__c</columns>
    <columns>Holiday__c</columns>
    <columns>Role__c</columns>
    <columns>Role_Group__c</columns>
    <columns>Target_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FiscalYear__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY 2020 WDA with Details</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>